# home_automation

./: .gitignore  Activity.cpp  Activity.h  Appliances.cpp  Classes.cpp  Classes.h  Client2.cpp  ClientData.cpp  ClientData.h  Discovery.cpp  Makefile  README.md  RelayClient.cpp  RelayServerClient.cpp  RelayServerClient.h  Server.h  client1.cpp  config_input.cpp  functions.cpp  functions.h  jsontest.cpp  latest_Server.cpp  main.cpp  relay_server.grpc.pb.cc  relay_server.grpc.pb.h  relay_server.pb.cc  relay_server.pb.h  relay_server.proto  server.cpp  test.cpp
Android-java/: build.gradle
Android-java/app/: build.gradle
Android-java/app/src/androidTest/java/com/home/homeautomation/: ExampleInstrumentedTest.java
Android-java/app/src/main/: AndroidManifest.xml
Android-java/app/src/main/java/com/home/homeautomation/: HouseService.java  MainActivity.java  NetworkDiscovery.java  RoomActivity.java  (+1 more)
Android-java/app/src/main/proto/: AppToCppServer.proto
Android-java/app/src/main/res/layout/: activity_appliance_view.xml  activity_main.xml  activity_room.xml
Android-java/gradle/wrapper/: gradle-wrapper.properties
Arduino/arduino_server/: arduino_server.ino
Arduino/hallArduino/: hallArduino.ino
cpp/: .gitignore  .server_config.conf.swp  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.ac  server_config.conf  test.c
cpp/TestFiles/: client1.cpp  newsimpletest.cpp
cpp/include/: Activity.h  AppToCpp_Server.h  Appliances.h  Configuration.h  Data.h  ExtFunctions.h  RelayServerClient.h  Room.h
cpp/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
cpp/nbproject/private/: private.xml
cpp/proto/: AppToCppServer.proto
cpp/src/: Activity.cpp  AppToCpp_Server.cpp  Appliances.cpp  Client.cpp  Configuration.cpp  CppServerMain.cpp  Data.cpp  ExtFunctions.cpp  Makefile  Makefile.am  Makefile.in  RelayServerClient.cpp  Room.cpp  Server.cpp  client1.cpp
cpp/tests/: newsimpletest.cpp
include/: Appliances.h  Client.h  Data.h  ExtFunctions.h  RelayServerClient.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
python/: README  py_server.py  relay_server.proto  relay_server.py  relay_server_pb2.py  relay_server_pb2_grpc.py  shell_script_test
src/: Activity.cpp  Data.cpp  ExtFunctions.cpp  latest_Server.cpp
(+1 files in other folders)
